--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,5 +2,8 @@ pandoc: '2.18'
 pkgdown: 2.0.6
 pkgdown_sha: ~
 articles: {}
-last_built: 2022-07-19T09:01Z
+last_built: 2022-07-19T09:32Z
+urls:
+  reference: https://alexmerot.github.io/smouseGPS/reference
+  article: https://alexmerot.github.io/smouseGPS/articles
 
