--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,9 @@
 pandoc: '2.18'
 pkgdown: 2.0.6
 pkgdown_sha: ~
-articles: {}
-last_built: 2022-07-20T05:08Z
+articles:
+  introduction: introduction.html
+last_built: 2022-07-20T05:17Z
 urls:
   reference: https://alexmerot.github.io/smouseGPS/reference
   article: https://alexmerot.github.io/smouseGPS/articles
