--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,5 @@ export(bspline)
 export(gps_smoothing_spline)
 export(smoothing_spline)
 importFrom(R6,R6Class)
+importFrom(Rfast,colRanks)
+importFrom(Rfast,sort_mat)
