Add more functions to bspline class.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,7 @@ export(smoothing_spline)
 importFrom(R6,R6Class)
 importFrom(Rfast,colRanks)
 importFrom(Rfast,sort_mat)
+importFrom(pracma,isempty)
+importFrom(pracma,mrdivide)
+importFrom(pracma,numderiv)
+importFrom(pracma,polyval)
