--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,5 +15,7 @@ Imports:
 URL: https://alexmerot.github.io/smouseGPS/
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    testthat (>= 3.0.0)
 VignetteBuilder: knitr
+Config/testthat/edition: 3
